--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -13,14 +13,10 @@
   /* transform: translateY(0px); */
   /* opacity: 1; */
 }
-.nav1 .box {
-  padding: 50px 20px 55px;
-}
-.nav1:after,
-.nav1 ul:after {
-  content: '';
-  clear: both;
-  display: block;
+.nav1 .box,
+.nav2 .box {
+  padding-top: 41px;
+  padding-bottom: 41px;
 }
 .nav1 .logobox {}
 .nav1 .logo {
@@ -44,20 +40,6 @@
 }
 .nav1 .description span {
   display: block;
-}
-.nav1 ul {}
-.nav1 li {
-  display: inline-block;
-  vertical-align: top;
-}
-.nav1 li a {
-  font-size: 14px;
-  line-height: 24px;
-  /* font-weight: 100; */
-  margin: 0 13px;
-  margin-top: -2px;
-  display: block;
-  position: relative;
 }
 .x {
   position: absolute;
@@ -87,10 +69,78 @@
   transform: scale(0.8);
 }
 
+/* --- Nav1/2 ------------------------ */
+
+.nav1 ul:before,
+.nav2 ul:before {
+  content: '';
+  display: block;
+  background-color: #e5e6e8;
+  position: absolute;
+  height: 1px;
+  margin-top: -1px;
+  top: 50%;
+  left: 0px;
+  right: 0px;
+}
+.nav1 ul,
+.nav2 ul {
+  position: relative;
+}
+.nav1 li:first-child,
+.nav1 li:last-child,
+.nav2 li:first-child,
+.nav2 li:last-child {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+}
+.nav1 li:nth-child(2),
+.nav2 li:nth-child(2) {
+  display: inline-block;
+  position: relative;
+  background-color:  #fff;
+}
+.nav1 li:last-child,
+.nav2 li:last-child {
+  left: auto;
+  right: 0;
+}
+.nav1 li:first-child a,
+.nav2 li:first-child a {
+  margin-left: 0px;
+}
+.nav1 li:last-child a,
+.nav2 li:last-child a {
+  margin-right: 0px;
+}
+.nav1 li a,
+.nav2 li a {
+  font-size: 18px;
+  line-height: 24px;
+  /* font-weight: 100; */
+  font-family: Noto sans;
+  margin: 0 25px;
+  display: block;
+  position: relative;
+  text-transform:  uppercase;
+  color: #888998;
+  letter-spacing: 1px;
+}
+
 /* --- Nav2 -------------------------- */
 
 .nav2 {
-  display: none;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  /* transition: none; */
+  /* transform: translateY(-20px); */
+  /* opacity: 0; */
+  z-index: 1;
 }
 
 /* --- Responsive -------------------- */
