--- a/assets/css/p-home.css
+++ b/assets/css/p-home.css
@@ -1,27 +1,34 @@
-/* --- Header ------------------------ */
+/* --- Intro ------------------------- */
 
 .intro {
-  display: block;
+  display: table;
   position: relative;
-  height: 100vh;
-  max-height: 100vh;
+  height: 100vh !important;
+  width: 100%;
   overflow: hidden;
-  padding-top: 217px;
+  /* padding-top: 217px; */
   /* margin-bottom: 90px; */
   box-sizing: border-box;
 }
+.intro .fp-tableCell {
+  display: table;
+  width: 100%;
+  text-align: center;
+}
 .intro .box {
   position: relative;
-  height: 100%;
-  padding: 20px;
-  padding-top: 0;
-  width: 669px;
+  display: table-cell;
+  vertical-align: middle;
+  padding-top: 64px;
+  width: 100%;
+  max-width: 669px;
   /* box-shadow: 0px -1px #e8eef1 inset; */
 }
-.intro .non {position: relative;display: block;margin: 0 auto;margin-bottom: 70px;width: 460px;height: 460px;overflow: hidden;}
+.intro .non {position: relative;display: inline-block;vertical-align: middle;width: 76%;max-width: 470px;margin: 0 -0.5%;}
 .intro .non:after {
   content: "";
   display: block;
+  clear: both;
 }
 .intro img {
   width: 169%;
@@ -29,21 +36,97 @@
   margin-top: 9%;
   opacity: 0.8;
 }
-.intro svg {
+.intro .non > div {
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    overflow: hidden;
+}
+.intro .non svg {
   position: absolute;
   top: 0%;
   left: 0%;
+  width: 100%;
+  height: 100%;
   /* top: 50%; */
   /* left: 50%; */
   /* margin-left: -150px; */
   /* margin-top: -150px; */
 }
+.intro .n1,
+.intro .n2 {
+    display: inline-block;
+    vertical-align: middle;
+    margin-top: -3%;
+    width: 10%;
+    max-width: 65px;
+    position: relative;
+    z-index: 2;
+}
+.intro .n1 > div,
+.intro .n2 > div {
+    display: block;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+}
+.intro .n1 svg,
+.intro .n2 svg {
+  display: block;
+}
+.intro .n1 {}
+.intro .n2 {}
 .intro h1 {
-  font-family:  Lora;
+  margin: 0 auto;
+  max-width: 570px;
+  margin-top: 60px;
+  margin-bottom: 30px;
   font-family: Crimson text;
   font-size: 22px;
   line-height: 34px;
   font-weight: 400;
   letter-spacing: 1px;
-  padding: 0 40px;
+}
+
+/* --- Featured ---------------------- */
+
+.featured {
+    display: block;
+    position: relative;
+    height: 100vh;
+    width: 100%;
+}
+.featured .box {
+    padding-top: 125px;
+}
+.featured .box:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.featured .left {
+    width: 20%;
+    text-align: left;
+    margin-right: 2%;
+}
+.featured .left h2 {}
+.featured .left .more {}
+.featured .left .more span {}
+.featured .left ul {}
+.featured .left ul li {}
+.featured .left ul li a {}
+.featured .left ul li a i {}
+
+/* right */
+
+.featured .right {
+    width: 78%;
+}
+.featured .right h3 {}
+.featured .right h4 {}
+.featured .right .images {}
+.featured .right .images div {}
+.featured .right .images img {
+    width: 100%;
+    height: auto;
 }
