--- a/assets/css/p.css
+++ b/assets/css/p.css
@@ -1,6 +1,8 @@
 .box {
   width: 100%;
   max-width: 1400px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin: 0 auto;
   box-sizing: border-box;
 }
@@ -8,7 +10,7 @@ h2 {
   font-size: 23px;
   font-weight: 800;
   color: #000;
-  letter-spacing: -1.5px;
+  letter-spacing: -.5px;
   margin-bottom: 28px;
 }
 h3 {}
@@ -56,7 +58,7 @@ nav a.link:after {
   height: 4px;
 }
 nav a.link:hover:after {
-  background-color: #111;
+  background-color: #3b3b3b;
 }
 
 /* --- Content ----------------------- */
