--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,3 +1,4 @@
+.navs {}
 .nav1 {
   position: absolute;
   top: 0;
@@ -6,6 +7,7 @@
   /* transition: none; */
   /* transform: translateY(-20px); */
   /* opacity: 0; */
+  background-color: #fff;
   z-index: 1;
 }
 .loaded .nav1 {
@@ -13,19 +15,14 @@
   /* transform: translateY(0px); */
   /* opacity: 1; */
 }
-.nav1 .box,
-.nav2 .box {
-  padding-top: 41px;
-  padding-bottom: 41px;
-}
 .nav1 .logobox {}
 .nav1 .logo {
   transition: transform 0.2s ease;
   margin-top: 0;
   padding: 0 9px;
 }
-.nav1 .logo img {
-  width: 247px;
+.nav1 .logo svg {
+  width: 246px;
   vertical-align: top;
 }
 .nav1 .logo:hover {
@@ -41,47 +38,29 @@
 .nav1 .description span {
   display: block;
 }
-.x {
-  position: absolute;
-  top: 16px;
-  right: -19px;
-  height: 100px;
-  width: 100px;
-  cursor: pointer;
-  overflow: hidden;
-}
-.x:after {
-  position: absolute;
-  display: block;
-  top: 50%;
-  height: 31px;
-  width: 100%;
-  content: "\274c";
-  content: "\00D7";
-  /* use the hex value here... */
-  font-size: 33px;
-  margin-top: -12px;
-  color: #252746;
-  text-align: center;
-  transition: transform 0.3s ease, color 0.3s ease;
-}
-.x:hover:after {
-  transform: scale(0.8);
-}
 
 /* --- Nav1/2 ------------------------ */
 
+.nav1 .box,
+.nav2 .box {
+  padding-top: 38px;
+  padding-bottom: 38px;
+}
 .nav1 ul:before,
 .nav2 ul:before {
   content: '';
   display: block;
-  background-color: #e5e6e8;
   position: absolute;
   height: 1px;
   margin-top: -1px;
   top: 50%;
   left: 0px;
   right: 0px;
+}
+.nav1 ul:before,
+.nav2 ul:before,
+.navmobile .box > div:after {
+  background-color: #e5e6e8c4;
 }
 .nav1 ul,
 .nav2 ul {
@@ -101,7 +80,7 @@
 .nav2 li:nth-child(2) {
   display: inline-block;
   position: relative;
-  background-color:  #fff;
+  background-color: #fff;
 }
 .nav1 li:last-child,
 .nav2 li:last-child {
@@ -118,14 +97,14 @@
 }
 .nav1 li a,
 .nav2 li a {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 24px;
   /* font-weight: 100; */
   font-family: Noto sans;
   margin: 0 25px;
   display: block;
   position: relative;
-  text-transform:  uppercase;
+  text-transform: uppercase;
   color: #888998;
   letter-spacing: 1px;
 }
@@ -137,39 +116,189 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  transition: all 0.2s ease-out 0.3s;
+  background-color: #fff;
+  z-index: 1;
+}
+.sliding .nav2 {
+  transform: translateY(20px);
+  opacity: 0;
+  transition: all 0.1s ease 0s;
+}
+
+/* --- Navmobile --------------------- */
+
+.navmobile {
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
   /* transition: none; */
   /* transform: translateY(-20px); */
   /* opacity: 0; */
+  background-color: #fff;
   z-index: 1;
+}
+.navmobile .box {}
+.navmobile .box > div {
+  position: relative;
+}
+.navmobile .box > div:after {
+  content: '';
+  display: block;
+  position: absolute;
+  height: 1px;
+  margin-top: -1px;
+  top: 50%;
+  left: 0px;
+  right: 0px;
+}
+.logomobile {
+  position: absolute;
+  text-align: center;
+  top: -500px;
+  width: 100%;
+  margin-top: 2px;
+  z-index: 20;
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: transform 0.3s ease, opacity 0.3s ease, top 0s ease 0.3s;
+}
+.fp-viewing-0 .logomobile {
+  top: 70px;
+  opacity: 1;
+  transform: translateY(0);
+  transition: transform 0.3s 0.4s ease, opacity 0.3s 0.4s ease, top 0s ease 0s;
+}
+.logomobile a {
+  display: inline-block;
+}
+.logomobile a svg {
+  width: 146px;
+}
+
+/* --- Hamburger --------------------- */
+
+.ham1 {
+  display: inline-block;
+  position: relative;
+  top: 0;
+  right: 0px;
+  cursor: pointer;
+  padding: 30px;
+  z-index: 4;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -moz-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-color: #fff;
+}
+.ham1 em {
+  margin-top: -2px;
+  display: block;
+  position: relative;
+  width: 19px;
+  height: 15px;
+  transition: transform 0.17s ease;
+}
+.ham1 span {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 3px;
+  background: rgb(55, 61, 80);
+  -ms-transform-origin: left;
+  transform-origin: left;
+}
+.ham1 span:after {
+  position: absolute;
+  display: block;
+  content: "";
+  top: 0px;
+  left: -1px;
+  right: -1px;
+  height: 1px;
+  background: rgb(55, 61, 80);
+  background-clip: content-box;
+  border: 1px solid rgba(0, 0, 0, 0.47);
+  border-left-width: 0;
+  border-right-width: 0;
+}
+.ham1 .one,
+.ham1 .three {
+  transition: transform 0.17s ease, width 0.17s ease, background 0.17s ease;
+}
+.ham1 .one {
+  top: 0;
+}
+.ham1 .two {
+  margin-top: 6px;
+  transition: transform 0.17s ease, opacity 0.17s ease;
+}
+.ham1 .three {
+  top: auto;
+  bottom: 0;
+}
+
+/* x */
+
+.x1:hover {
+  /* transform: scale(1.1); */
+}
+.x1 em {
+  -ms-transform: translateX(3px);
+  transform: translateX(3px);
+}
+.x1 .one {
+  -ms-transform: rotate(43deg) scaleX(0.92);
+  transform: rotateZ(43deg) scaleX(0.92);
+}
+.x1 .two {
+  opacity: 0;
+  -ms-transform: scaleX(0.8);
+  transform: scaleX(0.8);
+}
+.x1 .three {
+  -ms-transform: rotate(-43deg) scaleX(0.92);
+  transform: rotateZ(-43deg) scaleX(0.92);
 }
 
 /* --- Responsive -------------------- */
 
-@media only screen and (max-width: 510px) {
-  .nav1 {
-    padding: 51px 20px 57px;
+@media only screen and (max-width: 1380px) {
+  .nav1 {}
+  .nav1 .box,
+  .nav2 .box {
+    padding-top: 27px;
+    padding-bottom: 27px;
   }
-  .loaded .nav1 {}
-  .nav1:before {}
-  .nav1 .logo {}
-  .nav1 .logo img {}
-  .nav1 .description {}
-  .nav1 .description span {
-    display: inline;
+  .nav1 .logo svg {
+    width: 204px;
   }
-  .nav1 ul {}
-  .x {
-    top: 16px;
-    right: -20px;
-    height: 90px;
-    width: 90px;
-    cursor: pointer;
-    overflow: hidden;
+  .nav1 li a,
+  .nav2 li a {
+    font-size: 15px;
   }
-  .x:after {
-    height: 29px;
-    font-size: 31px;
-    margin-top: -13px;
+}
+@media only screen and (max-width: 1000px) {
+  .nav1 {}
+  .nav1 .box,
+  .nav2 .box {
+    padding-top: 24px;
+    padding-bottom: 24px;
   }
-  .x:hover:after {}
+  .nav1 .logo svg {
+    width: 180px;
+  }
+  .nav1 li a,
+  .nav2 li a {
+    font-size: 14px;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .navs {
+    display: none;
+  }
+  .navmobile {
+    display: block;
+  }
 }
