--- a/assets/css/_reset.css
+++ b/assets/css/_reset.css
@@ -13,6 +13,7 @@ body {
   font-weight: 400;
   position: relative;
   text-align: center;
+  -webkit-font-smoothing: antialiased;
 }
 html,
 body {
