--- a/assets/css/p-home.css
+++ b/assets/css/p-home.css
@@ -38,11 +38,24 @@
   display: block;
   clear: both;
 }
-.intro img {
-  width: 169%;
-  margin-left: -35%;
-  margin-top: 9%;
+.intro .smoke {
+  position: relative;
+  width: 106%;
+  margin-top: -9%;
+  margin-left: -3%;
+}
+.intro .bg,
+.intro .fg {
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
   opacity: 0.8;
+}
+.intro .fg {
+  opacity: 0.7;
 }
 .intro .non > div {
   width: 100%;
@@ -112,7 +125,7 @@
 .intro h1 {
   opacity: 0;
   transform: translateY(-20px);
-  transition: all 0.8s cubic-bezier(.215, .61, .355, 1) 0.4s;
+  transition: transform 0.8s cubic-bezier(.215, .61, .355, 1) 0.4s, opacity 0.8s cubic-bezier(.215, .61, .355, 1) 0.4s;
 }
 .loaded .intro .n1,
 .loaded .intro .n2,
