--- a/assets/css/p-home.css
+++ b/assets/css/p-home.css
@@ -6,6 +6,8 @@
   position: relative;
   height: 100vh !important;
   width: 100%;
+  max-width: 770px;
+  margin: 0 auto;
   overflow: hidden;
   /* padding-top: 217px; */
   /* margin-bottom: 90px; */
@@ -21,8 +23,6 @@
   display: table-cell;
   vertical-align: middle;
   padding-top: 64px;
-  width: 100%;
-  max-width: 669px;
   /* box-shadow: 0px -1px #e8eef1 inset; */
 }
 .intro .non {
@@ -100,14 +100,44 @@
 .intro h1 {
   margin: 0 auto;
   max-width: 570px;
-  margin-top: 60px;
-  margin-bottom: 30px;
+  margin-top: 40px;
+  margin-bottom: 40px;
   font-family: "Crimson text";
   font-size: 22px;
   line-height: 34px;
   font-weight: 400;
   letter-spacing: 1px;
 }
+.intro .mouse {
+  position: absolute;
+  bottom: 101px;
+  left: 50%;
+  margin-left: -9px;
+  height: 30px;
+  width: 18px;
+  border: 2px solid #3d3d3d;
+  border-radius: 20px;
+  box-sizing:  border-box;
+  opacity: 0.8;
+  transition: all 0.3s cubic-bezier(.215, .61, .355, 1) 0.2s;
+  z-index: 20;
+}
+.sliding .mouse {
+  transform: translateY(15px);
+  opacity: 0;
+  transition: all 0.3s cubic-bezier(.215, .61, .355, 1) 0s;
+}
+.intro .mouse span {
+  position: absolute;
+  left: 6px;
+  top: 6px;
+  height: 2px;
+  width: 0;
+  border: 1px solid #3d3d3d;
+  border-radius: 20px;
+  animation: scrollr 3s linear infinite;
+}
+
 
 /* Loaded */
 
@@ -134,6 +164,28 @@
   opacity: 0.99;
   transform: translateY(0);
 }
+@keyframes scrollr {
+  0% {
+    opacity: 1;
+    transform: translateY(0)
+  }
+  12% {
+    opacity: 0;
+    transform: translateY(10px)
+  }
+  15% {
+    opacity: 0;
+    transform: translateY(0)
+  }
+  22% {
+    opacity: 1;
+    transform: translateY(0)
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0)
+  }
+}
 @media only screen and (max-width: 1400px) {
   .intro {}
   .intro .box {}
@@ -143,6 +195,33 @@
     margin-bottom: 70px;
     font-size: 21px;
     line-height: 34px;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .intro {
+    max-width: 597px;
+  }
+  .intro .box {}
+  .intro h1 {
+    max-width: 540px;
+    margin-top: 40px;
+    margin-bottom: 70px;
+    font-size: 21px;
+    line-height: 34px;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .intro .mouse {
+    bottom: 43px;
+  }
+}
+@media only screen and (max-width: 520px) {
+  .intro h1 {
+    max-width: 540px;
+    margin-top: 24px;
+    margin-bottom: 70px;
+    font-size: 19px;
+    line-height: 30px;
   }
 }
 
@@ -173,7 +252,7 @@
   margin-right: 2%;
 }
 .featured .left h2 {
-  margin-bottom: 60px;
+  margin-bottom: 69px;
 }
 .featured .left .more {
   font-size: 16px;
@@ -190,8 +269,8 @@
   transform: translateX(6px);
 }
 .featured .left ul {
-  margin-bottom: 71px;
-  width: 187%;
+  margin-bottom: 74px;
+  width: 192%;
 }
 .featured .left ul li {
   position: relative;
@@ -247,14 +326,25 @@
   width: 78%;
   /* height: 200px; */
 }
-.featured .right h3 {}
-.featured .right h4 {}
 .featured .right .images {
   position: relative;
   z-index: 1;
-  width: 81%;
   float: right;
   /* margin-top: 8px; */
+}
+.featured .right .images,
+.featured .right .title {
+  width: 80%;
+  float: right;
+}
+.featured .right h3 {
+    float: left;
+}
+.featured .right h4 {
+    float: right;
+    padding-right: 5%;
+    color: #bdbcc1;
+    margin-bottom: 8px;
 }
 .featured .right .images img {
   width: 100%;
