--- a/assets/css/_reset.css
+++ b/assets/css/_reset.css
@@ -74,6 +74,11 @@ table: {
 .clear {
   clear: both;
 }
+.ac:after {
+  content: "";
+  display: block;
+  clear:both;
+}
 
 /* ----- Forms ----------------------------- */
 
