--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,6 +1,6 @@
 .navs {}
 .nav1 {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -22,7 +22,7 @@
   padding: 0 9px;
 }
 .nav1 .logo svg {
-  width: 246px;
+  width: 204px;
   vertical-align: top;
 }
 .nav1 .logo:hover {
@@ -41,10 +41,13 @@
 
 /* --- Nav1/2 ------------------------ */
 
+.nav1, .nav2 {
+  opacity: 0.99;
+}
 .nav1 .box,
 .nav2 .box {
-  padding-top: 38px;
-  padding-bottom: 38px;
+  padding-top: 27px;
+  padding-bottom: 27px;
 }
 .nav1 ul:before,
 .nav2 ul:before {
@@ -97,7 +100,7 @@
 }
 .nav1 li a,
 .nav2 li a {
-  font-size: 16px;
+  font-size: 15px;
   line-height: 24px;
   /* font-weight: 100; */
   font-family: Noto sans;
@@ -109,10 +112,28 @@
   letter-spacing: 1px;
 }
 
+/* home */
+
+.home .nav1 .box {
+  padding-top: 38px;
+  padding-bottom: 19px;
+}
+.home .nav2 .box {
+  padding-top: 19px;
+  padding-bottom: 38px;
+}
+.home .nav1 .logo svg {
+  width: 246px;
+}
+.home .nav1 li a,
+.home .nav2 li a {
+  font-size: 16px;
+}
+
 /* --- Nav2 -------------------------- */
 
 .nav2 {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -120,6 +141,7 @@
   background-color: #fff;
   z-index: 1;
 }
+.scrolled .nav2,
 .sliding .nav2 {
   transform: translateY(20px);
   opacity: 0;
@@ -142,7 +164,7 @@
 /* --- Mobileham --------------------- */
 
 .mobileham {
-  position: absolute;
+  position: fixed;
   display: none;
   top: 0;
   left: 0;
@@ -180,7 +202,7 @@
 }
 .mm .logomobile,
 .fp-viewing-0 .logomobile {
-  top: 70px;
+  top: 64px;
   opacity: 1;
   transform: translateY(0);
   transition: transform 0.3s 0.4s ease, opacity 0.3s 0.4s ease, top 0s ease 0s;
@@ -200,7 +222,7 @@
   top: 0;
   right: 0px;
   cursor: pointer;
-  padding: 30px;
+  padding: 23px;
   z-index: 4;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -moz-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -278,7 +300,7 @@
 
 /* --- Responsive -------------------- */
 
-@media only screen and (max-width: 1380px) {
+@media only screen and (max-width: 1280px) {
   .nav1 {}
   .nav1 .box,
   .nav2 .box {
@@ -335,6 +357,7 @@
   .mobilenav .box {
     display: table;
     height: 100%;
+    padding-top: 23px;
   }
   .mobilenav .box ul {
     display: table-cell;
@@ -345,7 +368,7 @@
   }
   .mobilenav .box li {}
   .mobilenav .box li a {
-    font-size: 26px;
+    font-size: 23px;
     line-height: 2.5em;
     /* font-weight: 800; */
     /* letter-spacing: -1px; */
@@ -373,5 +396,10 @@
     opacity: 1;
     transform: translateY(0);
     transition: transform 0.3s ease-out 0.25s, opacity 0.3s ease-out 0.25s;
+  }
+}
+@media only screen and (max-width: 550px) {
+  .logomobile a svg {
+    width: 136px;
   }
 }
