--- a/assets/css/p.css
+++ b/assets/css/p.css
@@ -13,7 +13,7 @@ h2 {
   font-weight: 400;
   color: #000;
   /* letter-spacing: .5px; */
-  margin-bottom: 28px;
+  /* margin-bottom: 28px; */
 }
 h3 {}
 .cta1 {
@@ -29,6 +29,13 @@ h3 {}
   background-color: #56545d;
   color: #fff;
 }
+@media only screen and (max-width: 770px) {
+  .box {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+}
+
 
 /* --- Links ------------------------- */
 
