--- a/assets/css/p-home.css
+++ b/assets/css/p-home.css
@@ -110,22 +110,30 @@
 }
 .intro .mouse {
   position: absolute;
-  bottom: 100px;
+  bottom: 86px;
   left: 50%;
-  margin-left: -9px;
+  margin-left: -23px;
   height: 30px;
   width: 18px;
-  border: 2px solid #3d3d3d;
-  border-radius: 20px;
-  box-sizing: border-box;
+  padding: 14px;
+  box-sizing: content-box;
   opacity: 0.8;
   transition: all 0.3s cubic-bezier(.215, .61, .355, 1) 0.2s;
   z-index: 20;
+  cursor: pointer;
 }
 .sliding .mouse {
   transform: translateY(15px);
   opacity: 0;
   transition: all 0.3s cubic-bezier(.215, .61, .355, 1) 0s;
+}
+.intro .mouse div {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  border: 2px solid #3d3d3d;
+  border-radius: 20px;
+  box-sizing: border-box;
 }
 .intro .mouse span {
   position: absolute;
@@ -198,7 +206,7 @@
 }
 @media only screen and (max-width: 1280px) {
   .intro .mouse {
-    bottom: 78px;
+    bottom: 64px;
   }
 }
 @media only screen and (max-width: 1000px) {
@@ -215,14 +223,14 @@
   }
 }
 @media only screen and (max-width: 770px) {
-  .intro .box { 
+  .intro .box {
     padding-left: 38px;
     padding-right: 38px;
   }
 }
 @media only screen and (max-width: 700px) {
   .intro .mouse {
-    bottom: 43px;
+    bottom: 25px;
   }
 }
 @media only screen and (max-width: 520px) {
@@ -466,7 +474,7 @@
   }
   .featured .left {
     padding-left: 28px;
-    box-sizing:  border-box;
+    box-sizing: border-box;
   }
   .featured .left,
   .featured .right {
@@ -525,23 +533,22 @@
   .featured .right .images div img {}
 }
 @media only screen and (max-width: 770px) {
-  .featured .box {
-}
+  .featured .box {}
   .featured h2.left {
     padding-left: 0;
     padding-bottom: 0;
     margin-bottom: 16px;
     font-size: 17px;
     line-height: 1.4em;
-}
+  }
   .featured .left {
     padding-left: 22px;
-}
+  }
   .featured .left,
   .featured .right {}
   .featured .left .list {
     padding-bottom: 2px;
-}
+  }
   .featured .left .list ul {}
   .featured .left .list li {}
   .featured .left .list a {
@@ -550,27 +557,26 @@
     padding-left: 17%;
     padding-bottom: 9px;
     margin-bottom: 9px;
-}
-.featured .left ul li a i {
+  }
+  .featured .left ul li a i {
     padding-left: 4px;
     margin-left: -27px;
     margin-bottom: -11px;
     background-color: #fff;
-}
+  }
   .featured .left .list b {
     width: 7%;
     padding-top: 3px;
-}
+  }
   .featured .left .more {}
   .featured .left .more svg {}
   .featured .right {
     margin-bottom: 26px;
-}
+  }
   .featured .right .title {}
   .featured .right h3 {}
   .featured .right h4 {}
-  .featured .right .images {
-}
+  .featured .right .images {}
   .featured .right .images div {}
   .featured .right .images div img {}
 }
