--- a/assets/css/p.css
+++ b/assets/css/p.css
@@ -92,12 +92,16 @@ nav a.link:hover:after {
 
 /* --- Content ----------------------- */
 
+.project main,
+.projects main,
 .content {
   text-align: center;
   transition: none;
   transform: translateY(-30px);
   opacity: 0;
 }
+.loaded.project main,
+.loaded.projects main,
 .loaded .content {
   transition: transform 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940), opacity 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940);
   transform: translateY(0px);
@@ -127,6 +131,7 @@ nav a.link:hover:after {
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
+  font-size: 17px;
 }
 .content figure {
   /* box-shadow: 0px 25px 61px 0px rgba(0, 0, 0, 0.08); */
@@ -138,7 +143,8 @@ nav a.link:hover:after {
 .content img {
   max-width: 100%;
   vertical-align: top;
-  box-shadow: 0px 25px 61px 0px rgba(0, 0, 0, 0.08);
+  margin-bottom: 33px;
+  box-shadow: 0px 25px 61px 0px rgba(0, 0, 0, 0.04);
 }
 @media only screen and (max-width: 510px) {
   .content h1 {
