--- a/assets/css/p-home.css
+++ b/assets/css/p-home.css
@@ -102,7 +102,6 @@
   max-width: 570px;
   margin-top: 40px;
   margin-bottom: 50px;
-  font-family: "Crimson text";
   font-size: 22px;
   line-height: 34px;
   font-weight: 400;
@@ -367,12 +366,13 @@
 .featured .right .title {}
 .featured .right h3 {
   float: left;
+  font-family: Noto Sans;
 }
 .featured .right h4 {
   float: right;
   padding-right: 5%;
-  color: #bdbcc1;
   margin-bottom: 8px;
+  font-family: Noto Sans;
 }
 .featured .right .images img {
   width: 100%;
