--- a/assets/css/p.css
+++ b/assets/css/p.css
@@ -1,7 +1,23 @@
-.view > main {
-  display: block;
+.view {
   padding-top: 150px;
   padding-bottom: 64px;
+}
+.home .view {
+  padding: 0;
+}
+.about .box,
+.project .box {
+  max-width: 1356px;
+  position: relative;
+}
+.about main .box,
+.about section .box {
+  max-width: 1115px;
+}
+.view > main {
+  display: block;
+  /* padding-top: 150px; */
+  box-sizing: border-box;
 }
 .box {
   width: 100%;
@@ -111,26 +127,43 @@ nav a.link:hover:after {
 .content h2,
 .content h3 {}
 .content h1 {
-  font-weight: 300;
-  /* font-weight: 700; */
+  font-weight: 800;
   /* color: #000; */
-  font-size: 26px;
+  font-size: 28px;
   line-height: 39px;
   letter-spacing: -0.5px;
   margin-top: -6px;
-  margin-bottom: 25px;
+  margin-bottom: 30px;
 }
-.content h2 {}
-.content h3 {}
+.content h2 {
+  font-weight: 800;
+  font-size: 28px;
+  line-height: 39px;
+  letter-spacing: -0.5px;
+  margin-top: -6px;
+  margin-bottom: 30px;
+}
+.content h3 {
+  font-weight: 800;
+  font-size: 23px;
+  line-height: 39px;
+  letter-spacing: -0.5px;
+  margin-top: -6px;
+  margin-bottom: 30px;
+}
 .content p,
-.content figure {
+.content p > img,
+.content .captioned img,
+.content figure,
+.boxfeature .feature img {
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 45px;
 }
 .content p {
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 5px;
   font-size: 17px;
 }
 .content figure {
@@ -142,8 +175,7 @@ nav a.link:hover:after {
 }
 .content img {
   max-width: 100%;
-  vertical-align: top;
-  margin-bottom: 33px;
+  vertical-align: middle;
   box-shadow: 0px 25px 61px 0px rgba(0, 0, 0, 0.04);
 }
 @media only screen and (max-width: 510px) {
