--- a/assets/css/p.css
+++ b/assets/css/p.css
@@ -153,17 +153,20 @@ nav a.link:hover:after {
 }
 .content p,
 .content p > img,
-.content .captioned img,
+.content > img,
 .content figure,
+.content div > img,
+.content .captioned img,
 .boxfeature .feature img {
   margin: 0;
   margin-bottom: 45px;
 }
 .content p {
   max-width: 800px;
+  margin-top: -5px;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 5px;
+  /* padding-bottom: 5px; */
   font-size: 17px;
 }
 .content figure {
