Client/ FAQ / tweaks

--- a/assets/css/p-about.css
+++ b/assets/css/p-about.css
@@ -45,6 +45,24 @@
   max-width: 300%;
   width: auto;
 }
+.about main .heading svg {
+  position: absolute;
+  width: 230px;
+  height: 400px;
+  top: 50%;
+  right: 0px;
+  margin-right: -115px;
+  margin-top: -200px;
+  transition: all 0.5s 1s ease;
+}
+.about main .heading .right svg {
+  position: absolute;
+  top: 50%;
+  right: auto;
+  left: 0px;
+  margin-left: -115px;
+}
+
 
 /* Loaded animation */
 
@@ -53,6 +71,15 @@
 }
 .about.loaded main .heading .right {
   transform: translateX(60%);
+}
+.about.loaded main .heading svg {
+  opacity: 0;
+}
+.about.loaded main .heading svg {
+  transform: translateX(80px);
+}
+.about.loaded main .heading .right svg {
+  transform: translateX(-80px);
 }
 
 /* Sections */
