--- a/assets/css/_reset.css
+++ b/assets/css/_reset.css
@@ -14,6 +14,8 @@ body {
   position: relative;
   text-align: center;
   -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  -o-font-smoothing: antialiased;
 }
 html,
 body,
