--- a/assets/css/p-projects.css
+++ b/assets/css/p-projects.css
@@ -92,7 +92,7 @@
   background: #fff;
   z-index: 2;
 }
-.project .caption .close {
+.close {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -103,7 +103,7 @@
   transform-origin: center center;
   transition: all 0.2s 0.15s ease-out;
 }
-.project .caption .close b {
+.close b {
   position: absolute;
   display: block;
   top: 0;
@@ -115,7 +115,7 @@
   border-radius: 10px;
   transform-origin: center;
 }
-.project .caption .close b:nth-child(2n) {
+.close b:nth-child(2n) {
   transform: rotate(90deg);
 }
 .project .caption > span {
