--- a/assets/css/p.css
+++ b/assets/css/p.css
@@ -1,6 +1,9 @@
-.view {
+.view,
+.clients .box2 {
+  position: relative;
   padding-top: 150px;
   padding-bottom: 64px;
+  z-index: 1;
 }
 .home .view {
   padding: 0;
@@ -110,7 +113,9 @@ nav a.link:hover:after {
 
 .project main,
 .projects main,
-.content {
+.faq main,
+.about main,
+.clients .content {
   text-align: center;
   transition: none;
   transform: translateY(-30px);
@@ -118,7 +123,9 @@ nav a.link:hover:after {
 }
 .loaded.project main,
 .loaded.projects main,
-.loaded .content {
+.loaded.faq main,
+.loaded.about main,
+.loaded.clients .content {
   transition: transform 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940), opacity 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940);
   transform: translateY(0px);
   opacity: 1;
