--- a/assets/css/p-faq.css
+++ b/assets/css/p-faq.css
@@ -5,59 +5,61 @@
 .faq main {}
 .faq .box {}
 .faq main .box > div {
-    float: left;
-    width: 31.3%;
-    text-align: left;
-    margin-right: 3%;
-    margin-bottom: 40px;
+  float: left;
+  width: 31.3%;
+  text-align: left;
+  margin-right: 3%;
+  margin-bottom: 40px;
 }
 .faq .box > div:last-child {
-    margin-right: 0;
+  margin-right: 0;
 }
 .faq .box > div h2 {
-    font-family:  Noto Sans;
-    font-weight:  800;
-    font-size: 23px;
-    line-height: 1.5em;
-    max-width: 178px;
-    margin-bottom: 45px;
+  font-family: Noto Sans;
+  font-weight: 800;
+  font-size: 23px;
+  line-height: 1.5em;
+  max-width: 178px;
+  margin-bottom: 45px;
 }
 .faq .qa {
-    position: relative;
-    padding: 32px 0;
-    border: 1px solid #000;
-    border-bottom-width: 0;
-    border-right-width:  0;
-    border-left-width: 0;
-    cursor: pointer;
+  position: relative;
+  padding: 32px 0;
+  border: 1px solid #000;
+  border-bottom-width: 0;
+  border-right-width: 0;
+  border-left-width: 0;
+  cursor: pointer;
 }
-.faq .qa:last-child {border-bottom-width: 1px;}
+.faq .qa:last-child {
+  border-bottom-width: 1px;
+}
 .faq .qa h3 {
-    font-size: 21px;
-    line-height: 1.3em;
+  font-size: 21px;
+  line-height: 1.3em;
 }
 .faq .qa .text {
-    display: block;
-    font-size: 16px;
-    color: #6d6c77;
-    max-height: 0;
-    overflow: hidden;
+  display: block;
+  font-size: 16px;
+  color: #6d6c77;
+  max-height: 0;
+  overflow: hidden;
 }
 .faq .qa .text.initiated {
   transition: max-height 0.3s ease-out;
 }
 .faq .qa .text span:before {
   content: "";
-  display:block;
+  display: block;
   height: 15px;
 }
 .faq .qa .close {
-    top: auto;
-    bottom: 14px;
-    left: auto;
-    right: 11px;
-    margin: 0;
-    transition: all 0.3s ease-out;
+  top: auto;
+  bottom: 14px;
+  left: auto;
+  right: 11px;
+  margin: 0;
+  transition: all 0.3s ease-out;
 }
 .faq .qa .close.on {}
 
