--- a/assets/css/p-projects.css
+++ b/assets/css/p-projects.css
@@ -1,7 +1,7 @@
 /* --- Project ----------------------- */
 
 .project .view {
-  padding-bottom: 120;
+  padding-bottom: 95px;
 }
 .project main {}
 .project main,
